--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 members = [
     "node",
     "pallets/template",
+    "pallets/kitties",
     "runtime",
 ]
 resolver = "2"
@@ -16,7 +17,9 @@ resolver = "2"
 [workspace.dependencies]
 solochain-template-runtime = { path = "./runtime", default-features = false }
 pallet-template = { path = "./pallets/template", default-features = false }
+pallet-kitties = { path = "./pallets/kitties", default-features = false }
 clap = { version = "4.5.10" }
+pallet-insecure-randomness-collective-flip = { version = "26.0.0", default-features = false }
 frame-benchmarking-cli = { version = "43.0.0", default-features = false }
 frame-metadata-hash-extension = { version = "0.6.0", default-features = false }
 frame-system = { version = "38.0.0", default-features = false }
